// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`root hierachical machine 1`] = `
Array [
  "root",
  Object {},
  Array [
    "machine",
    Object {
      "key": "light",
      "name": "light",
    },
    Array [
      "state",
      Array [
        "green",
        "light_green",
      ],
    ],
    Array [
      "event",
      Array [
        "[*]",
        "light_red",
      ],
    ],
    Array [
      "event",
      Array [
        "light_red",
        "light_green",
        "TOGGLE",
      ],
    ],
    Array [
      "event",
      Array [
        "light_green",
        "light_red",
        "TOGGLE",
      ],
    ],
    Array [
      "machine",
      Object {
        "key": "light_red",
        "name": "red",
      },
      Array [
        "state",
        Array [
          "nested",
          "red_nested",
        ],
      ],
      Array [
        "event",
        Array [
          "[*]",
          "red_nested",
        ],
      ],
    ],
  ],
]
`;

exports[`root parallel machine 1`] = `
Array [
  "root",
  Object {},
  Array [
    "machine",
    Object {
      "key": "light",
      "name": "light",
    },
    Array [
      "state",
      Array [
        "on",
        "light_on",
      ],
    ],
    Array [
      "state",
      Array [
        "off",
        "light_off",
      ],
    ],
    Array [
      "event",
      Array [
        "[*]",
        "light_on",
      ],
    ],
    Array [
      "event",
      Array [
        "light_on",
        "light_off",
        "TOGGLE",
      ],
    ],
    Array [
      "event",
      Array [
        "light_off",
        "light_on",
        "TOGGLE",
      ],
    ],
  ],
]
`;

exports[`root simple machine 1`] = `
Array [
  "root",
  Object {},
  Array [
    "machine",
    Object {
      "key": "users-crud",
      "name": "users-crud",
    },
    Array [
      "state",
      Array [
        "on",
        "users-crud_on",
      ],
    ],
    Array [
      "state",
      Array [
        "off",
        "users-crud_off",
      ],
    ],
    Array [
      "event",
      Array [
        "[*]",
        "users-crud_on",
      ],
    ],
    Array [
      "event",
      Array [
        "users-crud_on",
        "users-crud_off",
        "TOGGLE",
      ],
    ],
    Array [
      "event",
      Array [
        "users-crud_off",
        "users-crud_on",
        "TOGGLE",
      ],
    ],
  ],
]
`;
